2008-08-03 Juuso Alasuutari <iuso@sourcemage.org>
	* paths_fix.patch, PRE_BUILD: Updated patch.

2008-07-07 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS, DEPENDS, PRE_BUILD, BUILD, INSTALL, paths_fix.patch:
	  Created spell.
