@@ -1,3 +1,7 @@
+2008-08-11 Juuso Alasuutari <iuso@sourcemage.org>
+	* paths_fix.patch, PRE_BUILD: Updated patch... again. Need to
+	  figure out another way to handle this.
+
 2008-08-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* paths_fix.patch, PRE_BUILD: Updated patch.
 
